tests/paczka1/fuzzy1/63155953.err
Error in line 1: A577 A879 5,9
Error in line 3: A577 A577 38,8
Error in line 6: OohqO0 A863 42,5
Error in line 13: ujHtfkSB7 S362 83,1
Error in line 11: QdM8Fs S362 54,2
Error in line 28: QdM8Fs A863 139,8
Error in line 31: QdM8Fs A879 54,5
